# cpp-renderer

./: CMakeLists.txt  LICENSE  README.md  start_xvfb.sh
cmake/: deps.cmake  opts.cmake
console/: CMakeLists.txt
console/src/: main.cpp
src/: CMakeLists.txt  Renderer.cpp  Renderer.h  yocto_gui_snapshot.cpp  yocto_gui_snapshot.h
